fix: exhibition title text align

--- a/app/globals.css
+++ b/app/globals.css
@@ -66,10 +66,10 @@
   h4,
   h5,
   h6 {
-    @apply scroll-m-20 font-brand tracking-tight;
+    @apply scroll-m-20 tracking-tight;
   }
   h1 {
-    @apply text-3xl font-black sm:text-4xl;
+    @apply font-brand text-3xl font-black sm:text-4xl;
   }
   h2 {
     @apply text-2xl font-bold sm:text-3xl;
